--- a/DatingApp/DatingApp.SPA/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/DatingApp.SPA/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -43,7 +43,7 @@
             <p>{{user.intrests}}</p>
           </tab>
           <tab heading="Photos">
-            
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
             <p>Messages will be here</p>
